# vapoursynth-zipcl

./: .gitignore  LICENSE  README.md  build.zig  build.zig.zon  hatch_build.py  pyproject.toml
.github/: FUNDING.yml  smoke.py
.github/workflows/: build.yaml
benchmark/: README.md  _bench.py  bilateral_bilateralgpu.vpy  bilateral_vszipcl.vpy  deband_placebo.vpy  deband_vszipcl.vpy  eedi3_vszip.vpy  eedi3_vszipcl.vpy  eedi3h_vszip.vpy  eedi3h_vszipcl.vpy  gaussblur100_vszipcl.vpy  gaussblur1_vszipcl.vpy  gaussblur250_vszipcl.vpy  nlmeans_knlm.vpy  nlmeans_nlm_cuda.vpy  nlmeans_vszipcl.vpy  run.ps1
src/: bilateral.zig  bm3d.zig  bm3d_kernels.cl  clframecache.zig  clpool.zig  deband.zig  dfttest.zig  dfttest_kernels.cl  eedi3.zig  gaussglur.zig  nlmeans.zig  resample.zig  vszipcl.zig
tests/: README.md  conftest.py  content.py  golden.py  helpers.py  test_bilateral.py  test_deband.py  test_eedi3.py  test_f16_parity.py  test_gaussblur.py  test_int_parity.py  test_nlmeans.py  test_num_streams_parity.py
tests/goldens/: bilateral.json  deband.json  eedi3.json  eedi3h.json  gaussblur.json  nlmeans.json
